[package]
name = "popmap"
version = "0.1.0"
edition = "2021"

[dependencies.uuid]
version = "1.2"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.scalararray]
version = "0.1.0"
git = "https://github.com/pop-map/scalararray"

[dependencies.telegram-auth]
version = "0.1.0"
git = "https://github.com/pop-map/telegram-auth"
rev = "0e0b1ae"