[package]
name = "popmap"
version = "0.1.0"
edition = "2021"

[features]
fake_auth = [ "telegram-auth/fake_auth" ]

[dependencies.uuid]
version = "1.2"
features = [ "v4", "serde" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.scalararray]
version = "0.1.0"
git = "https://github.com/pop-map/scalararray"

[dependencies.telegram-auth]
version = "0.1.0"
git = "https://github.com/pop-map/telegram-auth"
rev = "d8001fe"