[package]
name = "popmap"
version = "0.1.0"
edition = "2021"

[features]
fake_auth = [ ]

[dependencies]
hex = "0.4.3"
hmac-sha256 = "1.1.6"

[dependencies.uuid]
version = "1.2"
features = [ "v4", "serde" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.scalararray]
version = "0.1.0"
git = "https://github.com/pop-map/scalararray"
